--- a/pipelines/diabetes-train-and-deploy.yml
+++ b/pipelines/diabetes-train-and-deploy.yml
@@ -1,5 +1,5 @@
 variables:
-  ml-ws-connection: 'azmldemows' # Workspace Service Connection name
+  ml-ws-connection: 'amldeploydemo' # Workspace Service Connection name
   ml-ws: 'aml-deploy' # AML Workspace name
   ml-rg: 'MLdep' # AML resource Group name
   ml-ct: 'cpu-cluster-1' # AML Compute cluster name
